<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size32"
        android:background="@color/white">
        <ImageView
            android:id="@+id/imvBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size20"
            android:src="@drawable/ic_back_new"
            android:layout_centerVertical="true"
            app:tint="#2E38FF" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/be_vn_medium"
            android:layout_centerInParent="true"
            android:text="@string/txt_settings"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size56"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/size20"
        android:gravity="center_vertical"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:layout_marginHorizontal="@dimen/size20"
        >

        <ImageView
            android:layout_width="@dimen/size24"
            android:layout_height="@dimen/size24"
            android:src="@drawable/ic_language006"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_language"
            android:textColor="@color/black"
            android:textSize="@dimen/size18"
            android:layout_marginLeft="@dimen/size10"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size1"
        android:layout_marginHorizontal="@dimen/size20"
        android:background="#FF8300"/>

    <LinearLayout
        android:id="@+id/ll_rate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size56"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/size18"

        android:gravity="center_vertical"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:layout_marginHorizontal="@dimen/size20"
        >

        <ImageView
            android:layout_width="@dimen/size24"
            android:layout_height="@dimen/size24"
            android:src="@drawable/ic_rate006"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_us"
            android:textColor="@color/black"
            android:textSize="@dimen/size18"
            android:layout_marginLeft="@dimen/size10"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size1"
        android:layout_marginHorizontal="@dimen/size20"
        android:background="#FF8300"/>


    <LinearLayout
        android:id="@+id/ll_share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size56"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/size18"
        android:gravity="center_vertical"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:layout_marginHorizontal="@dimen/size20"
        >

        <ImageView
            android:layout_width="@dimen/size24"
            android:layout_height="@dimen/size24"
            android:src="@drawable/ic_language006"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_share"
            android:textColor="@color/black"
            android:textSize="@dimen/size18"
            android:layout_marginLeft="@dimen/size10"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size1"
        android:layout_marginHorizontal="@dimen/size20"
        android:background="#FF8300"/>

    <LinearLayout
        android:id="@+id/ll_privacy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size56"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/size18"
        android:gravity="center_vertical"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:layout_marginHorizontal="@dimen/size20"
        android:visibility="gone"
        >

        <ImageView
            android:layout_width="@dimen/size24"
            android:layout_height="@dimen/size24"
            android:src="@drawable/ic_policy006"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textColor="@color/black"
            android:textSize="@dimen/size18"
            android:layout_marginLeft="@dimen/size10"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size1"
        android:layout_marginHorizontal="@dimen/size20"
        android:background="#FF8300"/>

</LinearLayout>