<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".component.cleanervibrate_inv.VibrateCleanerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size20"
        android:layout_marginTop="@dimen/size20"
        android:background="@drawable/bg_border_cont_auto_cleaner"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="@dimen/size20">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:importantForAccessibility="no"

                android:src="@drawable/bg_vibrate006" />
<!--            <com.airbnb.lottie.LottieAnimationView-->
            <!--                android:id="@+id/anvConnectedDevice"-->
            <!--                android:layout_width="@dimen/size200"-->
            <!--                android:layout_height="@dimen/size200"-->
            <!--                android:layout_centerInParent="true"-->
            <!--                app:lottie_autoPlay="true"-->
            <!--                app:lottie_loop="true"-->
            <!--                app:lottie_rawRes="@raw/anim4" />-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPercent"
                style="@style/TextView_Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="0%" />
        </RelativeLayout>

        <TextView
            android:textColor="@color/blue_main_006"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size20"
            android:text="@string/vibration"
            android:fontFamily="@font/be_vn_medium"
            android:textStyle="bold"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="@dimen/size220"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="@dimen/size20"
            android:gravity="center"
            android:background="@drawable/bg_sw_button006"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:background="@drawable/bg_sellect_button006"
                android:elevation="0dp"
                android:stateListAnimator="@null"
                android:text="@string/normal"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/be_vn_medium"
                android:paddingVertical="@dimen/size8"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/btnStrong"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/size8"
                android:layout_margin="4dp"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:elevation="0dp"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:fontFamily="@font/be_vn_medium"
                android:text="@string/strong"
                android:textSize="18sp"
                android:textAllCaps="false" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/btnPlayAndPause"
            android:layout_width="@dimen/size152"
            android:layout_height="@dimen/size56"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/select_btn_front_ear"
            android:layout_marginTop="@dimen/size18"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imvPlayAndPause"
                    android:layout_width="@dimen/size40"
                    android:layout_height="@dimen/size40"
                    android:src="@drawable/ic_play006"
                    />
                <TextView
                    android:id="@+id/tvPlayAndPause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play"
                    android:layout_marginStart="@dimen/size12"
                    android:textColor="#2E38FF"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/size18"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AD"
                android:background="#FFEB3B"
                android:textColor="@color/white"
                android:textSize="@dimen/size10"
                android:layout_alignParentRight="true"
                android:paddingHorizontal="@dimen/size2"
                />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>